--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "express": "^5.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
